--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -4936,8 +4936,14 @@ padding-right: 6rem;
   gap: 6rem;
 }
 
+.gover__goverParty-imgBlock svg {
+  display: block;
+  width: 34rem;
+  height: 34rem;
+}
+
 .gover__goverParty img,
-.gover__goverPartyTable img, svg {
+.gover__goverPartyTable img, {
   display: block;
   width: 34rem;
   height: 34rem;
