--- a/bill/templates/state/redesign/drafts/change_form.html
+++ b/bill/templates/state/redesign/drafts/change_form.html
@@ -5,7 +5,7 @@
 
 <!--новая форма правления-->
 <div class="gover__newInner ChangeForm">
-    <h2>Новая фирма правления государства:</h2>
+    <h2>Новая форма правления государства:</h2>
     {% with forms=data|dict_key:'forms' %}
     <label class="ct__wide-modal-label-select">
         <select name="new_state_form" id="new_state_form">
