хотфикс svg депутата

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -4668,6 +4668,12 @@ padding-right: 6rem;
   height: 34rem;
 }
 
+.gover__withImage svg {
+  display: block;
+  width: 34rem;
+  height: 34rem;
+}
+
 .gover__tableDopInfo,
 .gover__tableCancel,
 .gover__tableVote {
